# noptica-rs

./: Cargo.toml  README.md  config.json  glasgow-applet.diff  glasgow.nix  plot.py  shell.nix  simple-dmi.json  simulate.py  wavemeter.json
src/: main.rs  noptica.rs  simple-dmi.rs  wavemeter.rs
