[package]
name = "noptica-rs"
version = "0.1.0"
authors = ["Sebastien Bourdeauducq <sb@m-labs.hk>"]
edition = "2018"

[[bin]]
name = "simple-dmi"
path = "src/simple-dmi.rs"

[[bin]]
name = "wavemeter"
path = "src/wavemeter.rs"

[dependencies]
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
argparse = "0.2.2"
